src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/no_islands_but_bridges.bgs
FIELD
11 x 8 | 0

BRIDGES
( 0, 1 | false )
